--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -201,13 +201,15 @@
 } */
 
 .contact-text p {
-  color: #d1d5db;
+  /* color: #525964;  */
+  color: #9ca3af; 
   margin: 0;
   line-height: 1.4;
 }
 
 .contact-text span {
-  color: #9ca3af;
+  /* color: #9ca3af; */
+  color: #bd73b0;
   font-size: 0.875rem;
 }
 
@@ -247,23 +249,25 @@
 }
 
 .map-info h4 {
-  color: white;
+  /* color: white; */
+  color: #bd73b0;
   font-size: 1.125rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
 
 .map-info p {
-  color: #d1d5db;
-  margin-bottom: 1rem;
-  line-height: 1.4;
+  color: #d1d5db; 
+  margin-bottom: 0.2rem;
+  line-height: 1.5;
 }
 
 .map-directions {
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
-  background: #3b82f6;
+  /* background: #3b82f6; */
+  background: #bd73b0;
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 0.375rem;
@@ -271,10 +275,13 @@
   font-size: 0.875rem;
   font-weight: 500;
   transition: all 0.3s ease;
+  margin-top: 0.6rem;
 }
 
 .map-directions:hover {
-  background: #2563eb;
+  /* background: #2563eb; */
+  background: #bcd39b;
+  color: #374151;
   transform: translateY(-1px);
 }
 
@@ -312,7 +319,9 @@
 }
 
 .legal-link:hover {
-  color: #3b82f6;
+  /* color: #3b82f6;
+  color: #bd73b0; */
+  color: #bcd39b;
 }
 
 /* Responsive Design */
